--- a/guides/nilmtk_install_guide.org
+++ b/guides/nilmtk_install_guide.org
@@ -1,3 +1,5 @@
+#+STARTUP: latexpreview
+#+STARTUP:  overview
 * Base Installation with Using VirtualEnv
 *Overview:*
 This guide will hopefully take you through the NILMTK install using python virtual env. The suggested method of installation via conda didn't work (at least on Linux), but this *[[https://github.com/nilmtk/nilmtk/issues/953][issue]]* was found on the github page and suggested just using pip directly with a virtual environment. For this the [[id:4b4a7f3c-066a-4f12-9bd0-9279c956b752][virtualenv]] tool was used in conjunction with the =virtualenvwrapper=.
@@ -16,15 +18,13 @@ pip install git+https://github.com/nilmtk/nilmtk@0.4.3
 
 *Instructions:*
 - download the =virtualenv= and =virtualenvwrapper= tools.
-- Create a virtual environment with a python version < 3.8 with the =mkvirtualenv= command see [[id:62704420-c188-4d11-afc0-0a46d46fd345][managing-python-versions]] for details.
+- Create a virtual environment with a python version < ~3.8~ with the =mkvirtualenv= command.
 - Activate that virtual environment with the =workon= command.
 - Install =nilmtk= and =nilmtk_metadata= from github using pip
 - test the install by loading the package
 
 The above boils down to:
 #+begin_src shell
-sudo pacman -S virtualenv virtualenvwrapper
-yay pthon3.8
 mkvirtualenv --python=/usr/bin/python3.8 nilmtk-env
 workon nilmtk-env
 pip install git+https://github.com/nilmtk/nilm_metadata/@0.2.4
@@ -52,8 +52,8 @@ Both problems are treated in more detail below.
 2. install nilmtk-metadata though pip from github
 3. [optionally fork &] clone nilmtk to local file system
 4. checkout the version tag you wish to use (in my case the most recent ~0.4.3~)
-5. edit =setup.py= for the correct version number (~0.4.3~) see section ref:secProblemWithNILMTKVersioning
-6. comment out imports in =nilmtk_contrib/disaggregate/__init__.py= see section ref:secProblemWithConribDependencies
+5. edit =setup.py= for the correct version number (~0.4.3~) see [[#NILMTK-Versioning][this section]].
+6. comment out imports in =nilmtk_contrib/disaggregate/__init__.py= see [[#Contrib-Dependencies][this section]].
 7. Pip install from your local copy of the repo
 8. install nilmtk-contrib from github using pip
 
@@ -71,7 +71,10 @@ git checkout -b <yourNewBranch>
 pip install ~/python/nilmtk/ # install NILMTK from local filesystem
 #+end_src
 
-** The Problem With NILMTK Versioning <<secProblemWithNILMTKVersioning>>
+** The Problem With NILMTK Versioning
+:PROPERTIES:
+:CUSTOM_ID: NILMTK-Versioning
+:END:
 When installing via pip, no matter what version you try install by either pointing to a specific version tag (say 0.4.3) or commit hash, pip always thinks it's installing version ~0.4.0.x~. This is because pip takes it's version number directly from the ~version~ variable set by =setup.py= which, is always set as ~0.4.0.x~ for some reason.
 
 All of this is only becomes a problem if you wish to install the contrib package which has a requirement for ~nilmtk>=0.4.3~ which pip cannot resolve, because it thinks you have ~0.4.0.xx~.
@@ -79,7 +82,10 @@ All of this is only becomes a problem if you wish to install the contrib package
 *Solution*
 To solve this you will need to clone the base NILMTK repo into your local file system and change the =setup.py= file to give you a version string of ~0.4.3.xx~.
 
-** The Problem With Contrib Dependencies <<secProblemWithConribDependencies>>
+** The Problem With Contrib Dependencies
+:PROPERTIES:
+:CUSTOM_ID: Contrib-Dependencies
+:END:
 When I attempted to get contrib working in 2022 using pip, I ran into numerous problems resolving dependencies. Despite getting my python packages to the versions specified in the documentation, the issues persisted. Since the issues often related to imports of non existent sub-modules, the import of any one algorithm would throw an error even if the import itself wasn't being used.
 
 *Solution*
@@ -102,11 +108,3 @@ from .rnn import RNN
 # from .bert import BERT
 #+end_src
 
-* ⚙ Configuration :ignore:
-#+STARTUP: latexpreview
-#+STARTUP:  overview
-#+INCLUDE: "~/.doom.d/orgReportHeader.org"
-
-# Local Variables:
-# line-spacing: 0.2
-# End:
