--- a/readme.org
+++ b/readme.org
@@ -9,7 +9,7 @@
 This repository contains supporting materials for my MSc project on non intrusive load motioning. Each major component is documented separately in more detail:
 - [[file:thesis_tools/readme.org][Code for Plotting, Dataset Synthesis and Disaggregation Experiments]]
 - [[file:data/readme.org][Synthetic NILMTK datasets for heat pump disaggregation]]
-- [[file:poster/Benjamin Frazer - MSc Project Poster.pdf][Project poster]]
+- [[file:poster/Benjamin_Frazer-MSc_Project_Poster.pdf][Project Poster]]
 - Final report
 - [[file:guides/nilmtk_install_guide.org][Guides on the installation of NILMTK]]
 - [[file:NILM_Dataset_Survey/NILM_Dataset_Survey.org][A survey of existing NILM datasets]]
