--- a/readme.org
+++ b/readme.org
@@ -1,8 +1,8 @@
 #+STARTUP: latexpreview
 #+STARTUP:  overview
-* TODO Overview
+* Tools for MSc Thesis Project on Heat Pump NILM
 [[file:poster/figures/increasingAggLevels_poster.png]]
-
+* TODO Overview
 This repository contains accompanying materials for my MSc project on non intrusive load motioning such as:
 - Code +documentation
 - Final Report and Posters
@@ -27,5 +27,6 @@ Each major component is documented separately in greater detail.
 - [[file:NILM_Dataset_Survey/NILM_Dataset_Survey.org][A survey of existing NILM datasets]]
 
 * Table of contents :TOC_1:
+- [[#tools-for-msc-thesis-project-on-heat-pump-nilm][Tools for MSc Thesis Project on Heat Pump NILM]]
 - [[#overview][Overview]]
 - [[#repository-content][Repository content]]
