--- a/readme.org
+++ b/readme.org
@@ -1,6 +1,7 @@
 #+STARTUP: latexpreview
 #+STARTUP:  overview
-* Tools for MSc Thesis Project on Heat Pump NILM
+#+TITLE: Tools for MSc Thesis Project on Heat Pump NILM
+* Heat load Profile Estimates Vs Ground truth :ignore:
 [[file:poster/figures/increasingAggLevels_poster.png]]
 * TODO Overview
 This repository contains accompanying materials for my MSc project on non intrusive load motioning such as:
@@ -27,6 +28,6 @@ Each major component is documented separately in greater detail.
 - [[file:NILM_Dataset_Survey/NILM_Dataset_Survey.org][A survey of existing NILM datasets]]
 
 * Table of contents :TOC_1:
-- [[#tools-for-msc-thesis-project-on-heat-pump-nilm][Tools for MSc Thesis Project on Heat Pump NILM]]
+- [[#heat-load-profile-estimates-vs-ground-truth][Heat load Profile Estimates Vs Ground truth]]
 - [[#overview][Overview]]
 - [[#repository-content][Repository content]]
