--- a/readme.org
+++ b/readme.org
@@ -8,6 +8,8 @@ This repository contains accompanying materials for my MSc project on non intrus
 - A NILM dataset survey
 - Synthesised NILM datasets (for heat pumps)
 
+All code is written in Python and implemented as a pip package, see [[file:thesis_tools/readme.org][here]] for an installation guide.
+
 The context and objectives of this work are summarised in the abstract of the final report:
 #+begin_quote
 The ongoing energy transition on the UK grid will lead to an increase in heat-pump load on the electrical network, presenting an opportunity to utilise this flexible load for demand-side response (DSR). Efficiently quantifying the available flexibility could be aided by developments in the field of non-intrusive load monitoring. Non-intrusive load monitoring (NILM) is the process of determining individual appliance loads from an analysis of an single aggregated point of measurement, such as a smart meter. The NILMTK is an open source repository of tools, algorithms and datasets targeted to wards appliance disaggregation research. NILMTK is structured towards appliance disaggregation at high sample rates (1-0.5Hz) and at only the individual household level, while the existing NILM research datasets have few heat-pumps. In this work, a synthetic NILMTK compatible dataset is presented, targeted towards heat pump load at both the individual and multi household level. A selection of contemporary disaggregation algorithms are then bench-marked using NILMTK on this dataset under a variety of power aggregation levels and sample rates including those reflective of A) typical household smart meter sample rates B) a feeder level measurement.
@@ -18,7 +20,7 @@ The full methodology, structure and assumptions entailing dataset synthesis are 
 
 * Repository content
 Each major component is documented separately in greater detail.
-- [[file:thesis_tools/readme.org][Code for Plotting, Dataset Synthesis and Disaggregation Experiments]]
+- [[file:thesis_tools/readme.org][Code for Data Synthesis NILM Experiments & Install Guide]]
 - [[file:data/readme.org][Synthetic NILMTK datasets for heat pump disaggregation]]
 - [[file:poster/Benjamin_Frazer-MSc_Project_Poster.pdf][Project Poster]]
 - Final report
